Polish mobile interface

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="/resources/css/picnic.min.css">
         <link rel="stylesheet" href="/resources/css/base.css">
         <link rel="stylesheet" href="/resources/css/panel.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <link rel="shortcut icon" href="/resources/img/touch.png" />
+        <link rel="apple-touch-icon" href="/resources/img/touch.png" />
         <script src="/module"></script>
         <script src="/resources/js/panel.js"></script>
     </head>
