Add incredibly basic code-approval auth

--- a/src/client/manage.html
+++ b/src/client/manage.html
@@ -20,7 +20,8 @@
                         <button id="close-button" class="dangerous">Shut Down</button>
                     </header>
                     <span class="p-3">
-                        Use this interface to configure your buttons and widgets.
+                        Use this interface to configure your buttons and widgets,
+                        and active panels.
                     </span>
                     <span class="p-3">
                         <a href="/" target="_blank">
@@ -33,6 +34,16 @@
                             <button>Browser Source</button>
                         </a>
                     </span>
+                    <hr>
+                    <span class="p-3">
+                        To approve a new panel user, enter the code as it appears on the device here
+                        and click "Approve".
+                        <label>
+                            <input class="two-third" type="text" id="approve-code" placeholder="Code">
+                            <button class="fourth" id="approve-button">Approve</button>
+                        </label>
+                    </span>
+                    <hr>
                     <small class="p-3">
                         Stream It! is public domain software that can be modified and distributed 
                         in any way thanks to being released under the
