Add Fullscreen button

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,5 +13,9 @@
     </head>
     <body>
         <div class="flex four-1200 three-900 two" id="buttons"></div>
+        <hr>
+        <div id="toolbox">
+            <button id="fullscreen-button">Fullscreen</button>
+        </div>
     </body>
 </html>
