Add QR Code Add graphics Prevent browser source from stopping on error

--- a/src/client/play.html
+++ b/src/client/play.html
@@ -6,6 +6,7 @@
     <script src="/resources/js/play.js"></script>
 </head>
 <body>
-    Loading...
+    This application requires JavaScript to be enabled to function.
+    Sorry &rpar;&colon;
 </body>
 </html>
