--- a/src/client/manage.html
+++ b/src/client/manage.html
@@ -33,6 +33,10 @@
                             target="_blank">
                             <button>Browser Source</button>
                         </a>
+                        <br>
+                        <img class="qr-code" src="/qr" alt="Panel QR Code">
+                        <br>
+                        <small>Scan this QR code to open the panel on a mobile device on the same network.</small>
                     </span>
                     <hr>
                     <span class="p-3">
